--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<p>This is new repogot</p>
+<p>This is new reposit</p>
 <p>This is new feature</p>
-<p>This is paragraph</p>
+<p>This is paragraph (dropdown)</p>
